static/bnSubmission/styles/style.css
html {
    background-color: rgb(255, 204, 0);
    scrollbar-color: rgba(1, 1, 1, 0.356) rgba(0, 0, 0, 0);
    scrollbar-width: thin;
    font-family: Pixelated;
}

h1 {
    color: black;
    font-family: 'Pixelated';
}

input[type="text"] {
    font-family: 'Pixelated';
    font-size: 16px;
}

@font-face {
    font-family: 'Pixelated';
    src: url('PixeloidSans-nR3g1.ttf');
}

.fixTableHead {
    overflow-y: auto;
    width: 400px;
}
.fixTableHead thead th {
    position: sticky;
    top: 0;
}
table {
    border-collapse: collapse;
}
th, td {
    padding: 8px 15px;
    width:80%;
    text-align: center;
}
th {
    background: #d74141c6;
}

tr {
    width:100%;
}

#submission-form {
    width: 250px;
    margin: 5px;
}

@media only screen and (max-width: 700px) {
    .sketch-grid-container {
        margin-left: auto !important;
        margin-right: auto !important;
        grid-template-columns: 1fr !important;
        grid-template-rows: repeat(3, 1fr) !important;
        grid-column-gap: 0px !important;
        grid-row-gap: 0px !important;;
        width: 500px !important;
        height: 1000px !important;
    }
}

.sketch-grid-container {
    margin: auto;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    width: 700px;
    height: 500px;
    justify-items: center;
}

@media only screen and (max-width: 700px) {
    .div1 { 
        grid-area: 1 / 1 / 2 / 2 !important;
    }
}
@media only screen and (max-width: 700px) {
    .div2 { 
        grid-area: 2 / 1 / 3 / 2 !important;
    } 
}
@media only screen and (max-width: 700px) {
    .div3 { 
        grid-area: 3 / 1 / 4 / 2 !important;
    } 

}
.div1 { 
    grid-area: 1 / 1 / 3 / 2; 
    width: 350px;
}

.div2 { 
    margin:auto;
    grid-area: 1 / 2 / 2 / 3; 
    text-align: center;
    width: 400px;
}

.div3 { 
    grid-area: 2 / 2 / 3 / 3; 
} 

.sketch-holder {
    height: 500px;
}

@media only screen and (max-width: 700px) {
    .selected {
        margin-top: -150px !important;
    }
}

.selected {
    margin-top: 25px;
    width: 340px;
    margin-bottom: 25px;
    text-align: center;
}

.tableHeaders{
    text-align: center;
}


/* Tooltip container */
.tooltip {
    text-align: center;
    position: relative;
    border-bottom: 1px dotted black;
    width:80%;
    /* If you want dots under the hoverable text */
}

/* Tooltip text */
.tooltip .tooltiptext {
    visibility: hidden;
    width: 120px;
    background-color: rgb(58, 169, 179);
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;

    /* Position the tooltip text - see examples below! */
    position: absolute;
    z-index: 1;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
    visibility: visible;
}

.scroller {
    width: inherit;
    height: 350px;
    overflow-y: scroll;
    scrollbar-color: rgba(1, 1, 1, 0.356) rgba(0, 0, 0, 0);
    scrollbar-width: thin;
    overflow-x: hidden;
}

#bandnames {
    width: inherit !important;
    max-height: 650px;
    min-height: 250px;
}

#vote-form {
    text-align: center;
}

#bandnames-table-div{
    width:100%;
}
  

